--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     </audio>
 
     <div id="form-container">
-      <h1>Enter Your Details</h1>
+      <!-- <h1>Enter Your Details</h1> -->
       <input
         type="text"
         id="name-input"
